docs: fix low-contrast CSS

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -4,6 +4,18 @@ body {
     color: #000;
 }
 
+.wy-side-nav-search > div.version {
+    color: #026;
+}
+
+.wy-menu-vertical header, .wy-menu-vertical p.caption {
+	color: #777;
+}
+
+.rst-content blockquote {
+    border-left: 2px solid #ddd;
+}
+
 code, .rst-content tt, .rst-content code {
     font-size: 95%;
 }
